--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook"
   },
   "main": "./dist/h-components.common.js",
-  "files": [ "dist/*"],
+  "files": [
+    "dist/*"
+  ],
   "dependencies": {
     "@storybook/addon-actions": "^6.3.6",
     "@storybook/addon-knobs": "^6.3.0",
@@ -22,6 +24,7 @@
     "@storybook/addon-essentials": "^6.0.26",
     "@storybook/addon-links": "^6.0.26",
     "@storybook/vue3": "^6.0.26",
+    "@tailwindcss/postcss7-compat": "^2.2.7",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -33,9 +36,12 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "postcss": "^7.0.36",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "typescript": "~4.1.5",
     "vue-cli-plugin-storybook": "~2.1.0",
     "vue-jest": "^5.0.0-0"
